-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.12.0-beta1
-
None
-
-
aee78bd58db609efc729cf883e91049e0e342049 (qt-creator/qt-creator/4.11)
Open the test.cpp
attachment in Qt Creator and attempt to rewrap the paragraphs. The first two contain no-break spaces and Qt Creator should not break at them, but does. Attempting the same wrapping in Emacs (c-fill-paragraph) properly breaks at the real spaces before "tone".
Emacs does not break at the zero-width examples below and neither does Qt Creator.
Use-case: write things like "4 kB" such that the 4 and the k aren't separated into multiple lines.
- relates to
-
QTCREATORBUG-17875 QtCreator replaces non breaking spaces with "normal" spaces in documents
-
- Closed
-